--- a/package.json
+++ b/package.json
@@ -47,14 +47,17 @@
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
     "axios": "^0.18.0",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.1",
     "owl.carousel": "^2.3.4",
+    "popper.js": "^1.16.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.8"
+    "vue-template-compiler": "^2.6.8",
+    "vuelidate": "^0.7.6"
   }
 }
